# ic_barcode_scanner

./: CMakeLists.txt  README.md  mainpage.dox  nodelet_plugins.xml  package.xml  rosdoc.yaml
CMakeModules/: FindIcBarcode.cmake
cfg/: IcBarcodeConfig.cfg
include/ic_barcode_scanner/: ic_barcode_scanner_nodelet.h
msg/: IcBarcodeResult.msg  IcBarcodeResults.msg
src/: ic_barcode_scanner_node.cpp  ic_barcode_scanner_nodelet.cpp
srv/: find_barcodes.srv
